--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,9 +8,9 @@
 </head>
 <body>
 
-<%= link_to 'Investment','\investments' %>
-<%= link_to 'Company','\companies' %>
-<%= link_to 'Portfolio','\portfolios' %>
+<%= link_to 'Investment','/investments' %>
+<%= link_to 'Company','/companies' %>
+<%= link_to 'Portfolio','/portfolios' %>
 <%= yield %>
 
 </body>
