--- a/app/views/investments/index.html.erb
+++ b/app/views/investments/index.html.erb
@@ -13,10 +13,10 @@
 
 <% @investments.each do |investment| %>
   <tr>
-    <td><%= investment.company_id %></td>
+    <td><%= investment.company.symbol %></td>
     <td><%= investment.quantity %></td>
     <td><%= investment.cost %></td>
-    <td><%= investment.portfolio_id %></td>
+    <td><%= investment.portfolio.description %></td>
     <td><%= link_to 'Show', investment %></td>
     <td><%= link_to 'Edit', edit_investment_path(investment) %></td>
     <td><%= link_to 'Destroy', investment, confirm: 'Are you sure?', method: :delete %></td>
